--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@faker-js/faker": "^9.8.0",
     "apicache": "^1.6.3",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
