--- a/vercel.json
+++ b/vercel.json
@@ -7,10 +7,6 @@
     {
       "source": "/robots.txt",
       "destination": "/robots.txt"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
     }
   ],
   "version": 2,
@@ -19,7 +15,11 @@
       "src": "./app.mjs",
       "use": "@vercel/node"
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/app.mjs"
+    }
   ]
-
-  
 }
