--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "source": "/robots.txt",
       "destination": "/robots.txt"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/app.mjs"
     }
   ],
   "version": 2,
@@ -14,12 +18,6 @@
     {
       "src": "./app.mjs",
       "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/app.mjs"
     }
   ]
 }
