--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "sitemap": "^8.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "yaml": "^2.8.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
