--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.0",
     "sitemap": "^8.0.0",
+    "slugify": "^1.6.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
